[package]
name = "recipe_api"
version = "0.1.0"
authors = ["Matt <matthieu.zandecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ['postgres', 'r2d2'] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
env_logger = "0.8.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.11"
